--- a/topologies/training-level7-part2-v3/topo_build.yml
+++ b/topologies/training-level7-part2-v3/topo_build.yml
@@ -26,12 +26,11 @@ nodes:
         - neighborDevice: leaf4-DC1
           neighborPort: Ethernet3
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet3
+        - neighborDevice: GW11
+          neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet3
+        - neighborDevice: GW12
+          neighborPort: Ethernet6
           port: Ethernet7
         - neighborDevice: OOB-DC1
           neighborPort: Ethernet2
@@ -58,12 +57,11 @@ nodes:
         - neighborDevice: leaf4-DC1
           neighborPort: Ethernet4
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet4
+        - neighborDevice: GW11
+          neighborPort: Ethernet7
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet4
+        - neighborDevice: GW12
+          neighborPort: Ethernet7
           port: Ethernet7
         - neighborDevice: OOB-DC1
           neighborPort: Ethernet3
@@ -86,12 +84,11 @@ nodes:
         - neighborDevice: leaf4-DC1
           neighborPort: Ethernet5
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet5
+        - neighborDevice: GW11
+          neighborPort: Ethernet8
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet5
+        - neighborDevice: GW12
+          neighborPort: Ethernet8
           port: Ethernet7
         - neighborDevice: OOB-DC1
           neighborPort: Ethernet4
@@ -120,12 +117,11 @@ nodes:
         - neighborDevice: leaf4-DC2
           neighborPort: Ethernet3
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet3
+        - neighborDevice: GW21
+          neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet3
+        - neighborDevice: GW22
+          neighborPort: Ethernet7
           port: Ethernet7
         - neighborDevice: OOB-DC2
           neighborPort: Ethernet2
@@ -152,12 +148,11 @@ nodes:
         - neighborDevice: leaf4-DC2
           neighborPort: Ethernet4
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet4
+        - neighborDevice: GW21
+          neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet4
+        - neighborDevice: GW22
+          neighborPort: Ethernet7
           port: Ethernet7
         - neighborDevice: OOB-DC2
           neighborPort: Ethernet3
@@ -180,12 +175,11 @@ nodes:
         - neighborDevice: leaf4-DC2
           neighborPort: Ethernet5
           port: Ethernet5
-          # connections to border-leafs
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet5
+        - neighborDevice: GW21
+          neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet5
+        - neighborDevice: GW22
+          neighborPort: Ethernet7
           port: Ethernet7
         - neighborDevice: OOB-DC2
           neighborPort: Ethernet4
@@ -196,6 +190,12 @@ nodes:
       ip_addr: 192.168.0.77
       sys_mac: 00:1c:73:17:c6:01
       neighbors:
+        - neighborDevice: GW31
+          neighborPort: Ethernet3
+          port: Ethernet1
+        - neighborDevice: GW31
+          neighborPort: Ethernet6
+          port: Ethernet2
         - neighborDevice: spine2-DC3
           neighborPort: Ethernet3
           port: Ethernet3
@@ -208,7 +208,7 @@ nodes:
         - neighborDevice: leaf2-DC3
           neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: PE31
+        - neighborDevice: GW31
           neighborPort: Ethernet3
           port: Ethernet7
 
@@ -216,6 +216,12 @@ nodes:
       ip_addr: 192.168.0.78
       sys_mac: 00:1c:73:18:c6:01
       neighbors:
+        - neighborDevice: GW31
+          neighborPort: Ethernet4
+          port: Ethernet1
+        - neighborDevice: GW31
+          neighborPort: Ethernet6
+          port: Ethernet2
         - neighborDevice: spine1-DC3
           neighborPort: Ethernet3
           port: Ethernet3
@@ -228,7 +234,7 @@ nodes:
         - neighborDevice: leaf1-DC3
           neighborPort: Ethernet6
           port: Ethernet6
-        - neighborDevice: PE31
+        - neighborDevice: GW31
           neighborPort: Ethernet4
           port: Ethernet7
 
@@ -365,72 +371,6 @@ nodes:
           port: Ethernet15
 
 
-  # Border-leafs
-  - borderleaf1-DC1:
-      ip_addr: 192.168.0.25
-      sys_mac: 00:1c:73:c5:c6:01
-      neighbors:
-          # connections to Border-leafs
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet2
-          port: Ethernet2
-          # connections to spines
-        - neighborDevice: spine1-DC1
-          neighborPort: Ethernet6
-          port: Ethernet3
-        - neighborDevice: spine2-DC1
-          neighborPort: Ethernet6
-          port: Ethernet4
-        - neighborDevice: spine3-DC1
-          neighborPort: Ethernet6
-          port: Ethernet5
-        - neighborDevice: PE11
-          neighborPort: Ethernet2
-          port: Ethernet10
-        - neighborDevice: PE12
-          neighborPort: Ethernet2
-          port: Ethernet12
-        - neighborDevice: OOB-DC1
-          neighborPort: Ethernet9
-          port: Ethernet15
-
-
-
-  - borderleaf2-DC1:
-      ip_addr: 192.168.0.26
-      sys_mac: 00:1c:73:c6:c6:01
-      neighbors:
-          # connections to Border-leafs
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet2
-          port: Ethernet2
-          # connections to spines
-        - neighborDevice: spine1-DC1
-          neighborPort: Ethernet7
-          port: Ethernet3
-        - neighborDevice: spine2-DC1
-          neighborPort: Ethernet7
-          port: Ethernet4
-        - neighborDevice: spine3-DC1
-          neighborPort: Ethernet7
-          port: Ethernet5
-        - neighborDevice: PE12
-          neighborPort: Ethernet3
-          port: Ethernet10
-        - neighborDevice: PE11
-          neighborPort: Ethernet3
-          port: Ethernet12
-        - neighborDevice: OOB-DC1
-          neighborPort: Ethernet10
-          port: Ethernet15
-
-
 # Leafs DC2
   - leaf1-DC2:
       ip_addr: 192.168.0.31
@@ -561,70 +501,6 @@ nodes:
           port: Ethernet7
         - neighborDevice: OOB-DC2
           neighborPort: Ethernet8
-          port: Ethernet15
-
-
-  # Border-leafs
-  - borderleaf1-DC2:
-      ip_addr: 192.168.0.35
-      sys_mac: 00:1c:73:d5:c6:01
-      neighbors:
-          # connections to Borderleafs
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet2
-          port: Ethernet2
-          # connections to spines
-        - neighborDevice: spine1-DC2
-          neighborPort: Ethernet6
-          port: Ethernet3
-        - neighborDevice: spine2-DC2
-          neighborPort: Ethernet6
-          port: Ethernet4
-        - neighborDevice: spine3-DC2
-          neighborPort: Ethernet6
-          port: Ethernet5
-        - neighborDevice: PE21
-          neighborPort: Ethernet3
-          port: Ethernet10
-        - neighborDevice: PE22
-          neighborPort: Ethernet3
-          port: Ethernet12
-        - neighborDevice: OOB-DC2
-          neighborPort: Ethernet9
-          port: Ethernet15
-
-  - borderleaf2-DC2:
-      ip_addr: 192.168.0.36
-      sys_mac: 00:1c:73:d6:c6:01
-      neighbors:
-          # connections to Borderleafs
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet2
-          port: Ethernet2
-          # connections to spines
-        - neighborDevice: spine1-DC2
-          neighborPort: Ethernet7
-          port: Ethernet3
-        - neighborDevice: spine2-DC2
-          neighborPort: Ethernet7
-          port: Ethernet4
-        - neighborDevice: spine3-DC2
-          neighborPort: Ethernet7
-          port: Ethernet5
-        - neighborDevice: PE22
-          neighborPort: Ethernet2
-          port: Ethernet10
-        - neighborDevice: PE21
-          neighborPort: Ethernet2
-          port: Ethernet12
-        - neighborDevice: OOB-DC2
-          neighborPort: Ethernet10
           port: Ethernet15
 
 # Leafs DC3
@@ -789,12 +665,6 @@ nodes:
         - neighborDevice: leaf4-DC1
           neighborPort: Ethernet15
           port: Ethernet8
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet15
-          port: Ethernet9
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet15
-          port: Ethernet10
         - neighborDevice: host1-DC1
           neighborPort: Ethernet15
           port: Ethernet11
@@ -830,12 +700,6 @@ nodes:
         - neighborDevice: leaf4-DC2
           neighborPort: Ethernet15
           port: Ethernet8
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet15
-          port: Ethernet9
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet15
-          port: Ethernet10
         - neighborDevice: host1-DC2
           neighborPort: Ethernet15
           port: Ethernet11
@@ -855,18 +719,18 @@ nodes:
           port: Ethernet2
 
 # WAN-DC1-Side
-  - PE11:
+  - GW11:
       ip_addr: 192.168.0.91
       sys_mac: 00:1c:73:91:c6:01
       neighbors:
         - neighborDevice: P1
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet10
+        - neighborDevice: GW12
+          neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet12
+        - neighborDevice: GW12
+          neighborPort: Ethernet3
           port: Ethernet3
         - neighborDevice: P2
           neighborPort: Ethernet3
@@ -874,19 +738,28 @@ nodes:
         - neighborDevice: RR
           neighborPort: Ethernet1
           port: Ethernet5
+        - neighborDevice: spine1-DC1
+          neighborPort: Ethernet8
+          port: Ethernet6
+        - neighborDevice: spine2-DC1
+          neighborPort: Ethernet8
+          port: Ethernet7
+        - neighborDevice: spine3-DC1
+          neighborPort: Ethernet8
+          port: Ethernet8
 
-  - PE12:
+  - GW12:
       ip_addr: 192.168.0.92
       sys_mac: 00:1c:73:92:c6:01
       neighbors:
         - neighborDevice: P2
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: borderleaf1-DC1
-          neighborPort: Ethernet12
+        - neighborDevice: GW11
+          neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: borderleaf2-DC1
-          neighborPort: Ethernet10
+        - neighborDevice: GW11
+          neighborPort: Ethernet3
           port: Ethernet3
         - neighborDevice: RR
           neighborPort: Ethernet2
@@ -894,24 +767,33 @@ nodes:
         - neighborDevice: P1
           neighborPort: Ethernet5
           port: Ethernet5
+        - neighborDevice: spine1-DC1
+          neighborPort: Ethernet9
+          port: Ethernet6
+        - neighborDevice: spine2-DC1
+          neighborPort: Ethernet9
+          port: Ethernet7
+        - neighborDevice: spine3-DC1
+          neighborPort: Ethernet9
+          port: Ethernet8
 
   - P1:
       ip_addr: 192.168.0.93
       sys_mac: 00:1c:73:93:c6:01
       neighbors:
-        - neighborDevice: PE11
+        - neighborDevice: GW11
           neighborPort: Ethernet1
           port: Ethernet1
         - neighborDevice: P3
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: PE31
+        - neighborDevice: GW31
           neighborPort: Ethernet1
           port: Ethernet3
         - neighborDevice: P2
           neighborPort: Ethernet4
           port: Ethernet4
-        - neighborDevice: PE12
+        - neighborDevice: GW12
           neighborPort: Ethernet5
           port: Ethernet5
         - neighborDevice: RR
@@ -922,13 +804,13 @@ nodes:
       ip_addr: 192.168.0.94
       sys_mac: 00:1c:73:94:c6:01
       neighbors:
-        - neighborDevice: PE12
+        - neighborDevice: GW12
           neighborPort: Ethernet1
           port: Ethernet1
         - neighborDevice: P4
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: PE11
+        - neighborDevice: GW11
           neighborPort: Ethernet4
           port: Ethernet3
         - neighborDevice: P1
@@ -939,18 +821,18 @@ nodes:
           port: Ethernet5
 
 # WAN-DC2-Side
-  - PE21:
+  - GW21:
       ip_addr: 192.168.0.95
       sys_mac: 00:1c:73:95:c6:01
       neighbors:
         - neighborDevice: P3
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet12
+        - neighborDevice: GW22
+          neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet10
+        - neighborDevice: GW22
+          neighborPort: Ethernet3
           port: Ethernet3
         - neighborDevice: P4
           neighborPort: Ethernet3
@@ -958,19 +840,28 @@ nodes:
         - neighborDevice: RR
           neighborPort: Ethernet5
           port: Ethernet5
+        - neighborDevice: spine1-DC1
+          neighborPort: Ethernet6
+          port: Ethernet6
+        - neighborDevice: spine2-DC1
+          neighborPort: Ethernet6
+          port: Ethernet7
+        - neighborDevice: spine3-DC1
+          neighborPort: Ethernet6
+          port: Ethernet8
 
-  - PE22:
+  - GW22:
       ip_addr: 192.168.0.96
       sys_mac: 00:1c:73:96:c6:01
       neighbors:
         - neighborDevice: P4
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: borderleaf2-DC2
-          neighborPort: Ethernet10
+        - neighborDevice: GW21
+          neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: borderleaf1-DC2
-          neighborPort: Ethernet12
+        - neighborDevice: GW21
+          neighborPort: Ethernet3
           port: Ethernet3
         - neighborDevice: RR
           neighborPort: Ethernet6
@@ -978,24 +869,33 @@ nodes:
         - neighborDevice: P3
           neighborPort: Ethernet5
           port: Ethernet5
+        - neighborDevice: spine1-DC1
+          neighborPort: Ethernet7
+          port: Ethernet6
+        - neighborDevice: spine2-DC1
+          neighborPort: Ethernet7
+          port: Ethernet7
+        - neighborDevice: spine3-DC1
+          neighborPort: Ethernet7
+          port: Ethernet8
 
   - P3:
       ip_addr: 192.168.0.97
       sys_mac: 00:1c:73:97:c6:01
       neighbors:
-        - neighborDevice: PE21
+        - neighborDevice: GW21
           neighborPort: Ethernet1
           port: Ethernet1
         - neighborDevice: P1
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: PE31
+        - neighborDevice: GW31
           neighborPort: Ethernet2
           port: Ethernet3
         - neighborDevice: P4
           neighborPort: Ethernet4
           port: Ethernet4
-        - neighborDevice: PE22
+        - neighborDevice: GW22
           neighborPort: Ethernet5
           port: Ethernet5
         - neighborDevice: RR
@@ -1006,13 +906,13 @@ nodes:
       ip_addr: 192.168.0.98
       sys_mac: 00:1c:73:98:c6:01
       neighbors:
-        - neighborDevice: PE22
+        - neighborDevice: GW22
           neighborPort: Ethernet1
           port: Ethernet1
         - neighborDevice: P2
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: PE21
+        - neighborDevice: GW21
           neighborPort: Ethernet4
           port: Ethernet3
         - neighborDevice: P3
@@ -1023,7 +923,7 @@ nodes:
           port: Ethernet5
 
 # WAN-DC3-Side
-  - PE31:
+  - GW31:
       ip_addr: 192.168.0.99
       sys_mac: 00:1c:73:99:c6:01
       neighbors:
@@ -1034,25 +934,30 @@ nodes:
           neighborPort: Ethernet3
           port: Ethernet2
         - neighborDevice: spine1-DC3
-          neighborPort: Ethernet7
+          neighborPort: Ethernet1
           port: Ethernet3
         - neighborDevice: spine2-DC3
-          neighborPort: Ethernet7
+          neighborPort: Ethernet1
           port: Ethernet4
         - neighborDevice: RR
           neighborPort: Ethernet9
           port: Ethernet5
-
+        - neighborDevice: spine1-DC3
+          neighborPort: Ethernet2
+          port: Ethernet6
+        - neighborDevice: spine2-DC3
+          neighborPort: Ethernet2
+          port: Ethernet7
 
 # WAN RR
   - RR:
       ip_addr: 192.168.0.90
       sys_mac: 00:1c:73:90:c6:01
       neighbors:
-        - neighborDevice: PE11
+        - neighborDevice: GW11
           neighborPort: Ethernet5
           port: Ethernet1
-        - neighborDevice: PE12
+        - neighborDevice: GW12
           neighborPort: Ethernet4
           port: Ethernet2
         - neighborDevice: P1
@@ -1061,10 +966,10 @@ nodes:
         - neighborDevice: P2
           neighborPort: Ethernet5
           port: Ethernet4
-        - neighborDevice: PE21
+        - neighborDevice: GW21
           neighborPort: Ethernet5
           port: Ethernet5
-        - neighborDevice: PE22
+        - neighborDevice: GW22
           neighborPort: Ethernet4
           port: Ethernet6
         - neighborDevice: P3
@@ -1073,7 +978,7 @@ nodes:
         - neighborDevice: P4
           neighborPort: Ethernet5
           port: Ethernet8
-        - neighborDevice: PE31
+        - neighborDevice: GW31
           neighborPort: Ethernet5
           port: Ethernet9
 
