--- a/topologies/training-level7-part2-v3/files/cvp/cvp_info.yaml
+++ b/topologies/training-level7-part2-v3/files/cvp/cvp_info.yaml
@@ -8,8 +8,6 @@ cvp_info:
     Leaf-DC1:
       parent: DC1
       nodes:
-      - borderleaf1-DC1
-      - borderleaf2-DC1
       - leaf1-DC1
       - leaf2-DC1
       - leaf3-DC1
@@ -31,8 +29,6 @@ cvp_info:
     Leaf-DC2:
       parent: DC2
       nodes:
-      - borderleaf1-DC2
-      - borderleaf2-DC2
       - leaf1-DC2
       - leaf2-DC2
       - leaf3-DC2
@@ -72,32 +68,22 @@ cvp_info:
     ISP:
       parent: "Provider Network"
       nodes:
-      - PE11
-      - PE12
-      - PE21
-      - PE22
-      - PE31
+      - GW11
+      - GW12
+      - GW21
+      - GW22
+      - GW31
       - P1
       - P2
       - P3
       - P4
       - RR
-    OOB:
-      parent: Tenant
-      nodes:
-      - OOB-DC1
-      - OOB-DC2
-      - OOB-CORE
   snapshots:
   configlets:
     containers:
       Tenant:
       - ATD-INFRA
     netelements:
-      borderleaf1-DC1:
-      - borderleaf1-DC1-BASE
-      borderleaf2-DC1:
-      - borderleaf2-DC1-BASE
       leaf1-DC1:
       - leaf1-DC1-BASE
       leaf2-DC1:
@@ -118,12 +104,6 @@ cvp_info:
       host2-DC1:
       - host2-DC1-BASE
       - host2-DC1-START
-      borderleaf1-DC2:
-      - borderleaf1-DC2-BASE
-      - borderleaf1-DC2-START
-      borderleaf2-DC2:
-      - borderleaf2-DC2-BASE
-      - borderleaf2-DC2-START
       leaf1-DC2:
       - leaf1-DC2-BASE
       - leaf1-DC2-START
@@ -157,16 +137,16 @@ cvp_info:
       host2-DC3:
       - host2-DC3-BASE
       - host2-DC3-START
-      PE11:
-      - PE11-BASE
-      PE12:
-      - PE12-BASE
-      PE21:
-      - PE21-BASE
-      PE22:
-      - PE22-BASE
-      PE31:
-      - PE31-BASE
+      GW11:
+      - GW11-BASE
+      GW12:
+      - GW12-BASE
+      GW21:
+      - GW21-BASE
+      GW22:
+      - GW22-BASE
+      GW31:
+      - GW31-BASE
       P1:
       - P1-BASE
       P2:
@@ -177,12 +157,6 @@ cvp_info:
       - P4-BASE
       RR:
       - RR-BASE
-      OOB-CORE:
-      - OOB-CORE-BASE
-      OOB-DC1:
-      - OOB-DC1-BASE
-      OOB-DC2:
-      - OOB-DC2-BASE
       spine1-DC3:
       - spine1-DC3-BASE
       spine2-DC3:
