--- a/topologies/metadata.yml
+++ b/topologies/metadata.yml
@@ -18,6 +18,10 @@ topologies:
       labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/avd_03182024.tar.gz
     training-level1-me:
       labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/me_03182024.tar.gz
+    training-level-1-mini-1:
+      labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/L1-Teaser-Fundamentals_04082024.tar.gz 
+    training-level-1-mini-1:
+      labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/L1-Teaser-Management_04082024.tar.gz
   atd-testdrivetraining-prod:
     training-level-1-cl:
       labguide_zipfile_url : gs://topology_deploy_files_prod/lab-guide-zips/L1_02062024.tar.gz
@@ -37,3 +41,7 @@ topologies:
       labguide_zipfile_url : gs://topology_deploy_files_prod/lab-guide-zips/avd_03182024.tar.gz
     training-level1-me:
       labguide_zipfile_url : gs://topology_deploy_files_prod/lab-guide-zips/me_03182024.tar.gz
+    training-level-1-mini-1:
+      labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/L1-Teaser-Fundamentals_04082024.tar.gz 
+    training-level-1-mini-1:
+      labguide_zipfile_url : gs://topology_deploy_files/lab-guide-zips/L1-Teaser-Management_04082024.tar.gz
