Deployed modules.yam
Created Mappings switches to SSHweb session click area and SSH session IP address by Sasa

--- a/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
@@ -1,37 +1,106 @@
 topology:
   image: "atd-topo.png"
   nodes:
-    Spine1:
-      coords: "65,197,245,279"
+    spine1-DC1:
+      coords: "428,1239,308,1159"
       ip: "192.168.0.11"
-    Spine2:
-      coords: "360,196,543,280"
+    spine2-DC1:
+      coords: "596,1232,487,1156"
       ip: "192.168.0.12"
-    Spine3:
-      coords: "656,196,837,282"
+    spine3-DC1:
+      coords: "660,1160,771,1236"
       ip: "192.168.0.13"
-    Leaf1:
-      coords: "24,491,208,575"
+    leaf1-DC1:
+      coords: "274,1396,375,1474"
       ip: "192.168.0.21"
-    Leaf2:
-      coords: "248,491,432,576"
+    leaf2-DC1:
+      coords: "540,1479,440,1391"
       ip: "192.168.0.22"
-    Leaf3:
-      coords: "471,489,655,575"
+    leaf3-DC1:
+      coords: "579,1400,673,1479"
       ip: "192.168.0.23"
-    Leaf4:
-      coords: "696,491,878,575"
+    leaf4-DC1:
+      coords: "836,1469,740,1400"
       ip: "192.168.0.24"
-    BorderLeaf1:
-      coords: "204,20,386,107"
+    GW11:
+      coords: "354,510,469,593"
       ip: "192.168.0.25"
-    BorderLeaf2:
-      coords: "498,21,680,106"
-      ip: "192.168.0.26"
-    Host1:
-      coords: "141,646,325,733"
+    GW12:
+      coords: "458,681,561,759"
+      ip: "192.168.0.25"
+    host1-DC1:
+      coords: "318,1513,413,1592"
       ip: "192.168.0.51"
-    Host2:
-      coords: "589,647,774,733"
+    host2-DC1:
+      coords: "739,1594,635,1523"
       ip: "192.168.0.52"
+    spine1-DC2:
+      coords: "1218,1159,1324,1231"
+      ip: "192.168.0.14"
+    spine2-DC2:
+      coords: "1394,1159,1501,1234"
+      ip: "192.168.0.15"
+    spine3-DC2:
+      coords: "1563,1160,1665,1239"
+      ip: "192.168.0.16"
+    leaf1-DC2:
+      coords: "1176,1398,1271,1472"
+      ip: "192.168.0.31"
+    leaf2-DC2:
+      coords: "1348,1400,1439,1482
+      ip: "192.168.0.32"
+    leaf3-DC2:
+      coords: "1480,1401,1575,1477"
+      ip: "192.168.0.33"
+    leaf4-DC2:
+      coords: "1639,1403,1733,1479"
+      ip: "192.168.0.34"
+    GW21:
+      coords: "1491,515,1598,594" 
+      ip: "192.168.0.95"
+    GW22:
+      coords: "1397,743,1302,672"
+      ip: "192.168.0.96"
+    host1-DC2:
+      coords: "1243,1517,1340,1591" 
+      ip: "192.168.0.53"
+    host2-DC2:
+      coords: "1540,1520,1646,1594"
+      ip: "192.168.0.54"  
+    spine1-DC3: "748,253,859,335"
+      coords: 
+      ip: "192.168.0.77"
+    spine2-DC3: "905,255,1006,335"
+      coords: 
+      ip: "192.168.0.78"
+    leaf1-DC3: "762,134,859,213"
+      coords: 
+      ip: "192.168.0.80"
+    leaf2-DC3: "900,213,995,136"
+      coords: 
+      ip: "192.168.0.81"
+    GW31:
+      coords: "845,412,952,482"
+      ip: "192.168.0.99"
+    host1-DC3:
+      coords: "768,30,860,104"
+      ip: "192.168.0.82"
+    host2-DC3:
+      coords: "900,35,998,111" 
+      ip: "192.168.0.83" 
+    P1:
+      coords: "752,588,656,514"
+      ip: "192.168.0.93"
+    P2:
+      coords: "658,678,750,750"
+      ip: "192.168.0.94"
+    P3:
+      coords: "1069,505,1177,587"
+      ip: "192.168.0.97"
+    P4:
+      coords: "1174,745,1074,673"
+      ip: "192.168.0.98"
+    RR:
+      coords: "967,884,877,805"
+      ip: "192.168.0.90"
   servers:
