--- a/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
@@ -47,7 +47,7 @@ topology:
       coords: "1176,1398,1271,1472"
       ip: "192.168.0.31"
     leaf2-DC2:
-      coords: "1348,1400,1439,1482
+      coords: "1348,1400,1439,1482"
       ip: "192.168.0.32"
     leaf3-DC2:
       coords: "1480,1401,1575,1477"
