--- a/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level7-part2-v3/files/apps/uilanding/modules.yaml
@@ -73,11 +73,11 @@ topology:
     spine2-DC3: 
       coords: "905,255,1006,335"
       ip: "192.168.0.78"
-    leaf1-DC3: "762,134,859,213"
-      coords: 
+    leaf1-DC3: 
+      coords: "762,134,859,213"
       ip: "192.168.0.80"
-    leaf2-DC3: "900,213,995,136"
-      coords: 
+    leaf2-DC3: 
+      coords: "900,213,995,136"
       ip: "192.168.0.81"
     GW31:
       coords: "845,412,952,482"
