--- a/topologies/training-level7-part2-v3/files/MenuOptions.yaml
+++ b/topologies/training-level7-part2-v3/files/MenuOptions.yaml
@@ -5,7 +5,7 @@ options:
       description: "Reset All Devices to Base ATD (reset)"
   exam-start:
   -   command: "/usr/local/bin/ConfigureTopology.py -t exam-start"
-      description: "MLAG Lab (mlag)"
+      description: "Start of L7 Part 2 Exam"
 labconfiglets:
   exam-start:
     leaf1-DC1:
