--- a/topologies/training-level7-part2-v3/files/menus/training-l7.yaml
+++ b/topologies/training-level7-part2-v3/files/menus/training-l7.yaml
@@ -73,7 +73,7 @@
       - leaf1-DC3-BASE
       leaf2-DC3:
       - leaf2-DC3-BASE
-    exam-start:
+ Start-of-Exam:
       leaf1-DC1:
       - leaf1-DC1-BASE
       - leaf1-DC1-PRECONFIG
