--- a/topologies/training-level7-part2-v3/files/menus/training-l7.yaml
+++ b/topologies/training-level7-part2-v3/files/menus/training-l7.yaml
@@ -1,6 +1,6 @@
     lab_list:
       reset:
-        description: "Reset All Devices to Base Lab (ATD-INFRA and Device-BASE configlets assigned to each device)"
+        description: "Reset All Devices to Base Lab"
       Start-of-Exam:
         description: "Reset All Device to the Start of the L7 Part 2 Exam"
     labconfiglets:
